<resources>
    <string name="app_name">My Budget (Barrie Kealy)</string>
    <string name="action_settings">Settings</string>
    <string name="appDisplayName">My Budget</string>
    <string name="appDesc">My Budget allows users to enter their monetary information and receive a breakdown of their spending in return.</string>
    <string name="appMoreInfo">Enter your details now to get started!</string>

    <string name="welcomeText">Please Enter Your Details Below:</string>
    <string name="weeklyRadio">Weekly</string>
    <string name="monthlyRadio">Monthly</string>
    <string name="paymentAmountText">How Much Are You Paid Each Period?</string>
    <string name="paymentPeriodText">How Often Are You Paid?</string>
    <string name="amount">Enter Amount</string>
    <string name="savings">How Much To Save Each Month?</string>
    <string name="rentMortgageText">Rent/Mortgage A Month?</string>
    <string name="billsText">Outgoing Bills (Electricity, Water, Oil, etc.)</string>
    <string name="carYesNoText">Do You Have A Car?</string>
    <string name="carCheckBox">Car?</string>
    <string name="savingsGoalText">Savings Goal:</string>
    <string name="menuInfo">Info</string>
    <string name="calcBtnText">Calculate</string>
    <string name="budgetTitle">Your Spending (Monthly):</string>
    <!--<string name="monthPrompt">Choose Current Month</string>-->
    <string name="savingsColumnText">Savings Taken</string>
    <string name="rentColumnText">Rent/Mortgage</string>
    <string name="billsColumnText">Bills(+150 if Car)</string>
    <string name="euroSign">€</string>
    <string name="menuBudget">Budget</string>
    <string name="menuHome">Home</string>
    <string name="amountLeft">Amount Left Over(Last Entry):</string>
    <string name="saveButton">Save 50%?</string>
    <string name="menuReset">Reset</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="username">Username</string>
    <string name="title_activity_test">Sign in</string>
    <string name="password">Password</string>
    <string name="btnLoginText">Login</string>
    <string name="registerMessage">New to myBudget? Tap Here to Register!</string>
    <string name="registerText">Enter Your Registration Details Below:</string>
    <string name="usernameRegPrompt">Enter Username:</string>
    <string name="register">Register</string>
    <string name="menuLogout">Logout</string>
    <string name="passwordRegPrompt">Enter Password:</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
