<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.barriekealyca1.mybudget.activities.activities.Home"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:text="@string/welcomeText"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/welcomeText" />

    <!--<Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/paymentPeriodText"
        android:layout_below="@+id/welcomeText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="14dp"
        android:entries="@array/monthArray"
        android:prompt="@string/monthPrompt"
        android:id="@+id/monthSpinner" />-->


    <TextView
        android:text="@string/paymentPeriodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/paymentPeriodText"
        android:layout_below="@+id/welcomeText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/periodRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/paymentPeriodText">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/weeklyRadio"
                android:id="@+id/weeklyRadio"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/monthlyRadio"
                android:id="@+id/monthlyRadio"/>
    </RadioGroup>


    <TextView
        android:layout_below="@id/periodRadioGroup"
        android:text="@string/paymentAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:id="@+id/paymentAmountText" />


    <EditText
        android:id="@+id/paymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/paymentAmountText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/savings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:id="@+id/savingsText" />

    <EditText
        android:id="@+id/savingsAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/savingsText"
        android:layout_alignRight="@+id/paymentAmount"
        android:layout_alignEnd="@+id/paymentAmount" />

    <TextView
        android:text="@string/rentMortgageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/savingsAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/rentMortageText" />

    <EditText
        android:id="@+id/rentMortgageNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/rentMortageText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/billsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rentMortgageNum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/billsText" />

    <EditText
        android:id="@+id/bills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/billsText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carYesNoText"
        android:text="@string/carYesNoText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bills"
        android:layout_marginTop="26dp"/>

    <CheckBox
        android:id="@+id/carCheckBox"
        android:text="@string/carCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/carYesNoText"/>

    <TextView
        android:id="@+id/savingsGoalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savingsGoalText"
        android:layout_below="@+id/carCheckBox"
        android:layout_marginTop="26dp"/>

    <EditText
        android:id="@+id/savingsGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/savingsGoalText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calculateButton"
        android:text="@string/calcBtnText"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/savingsGoal"
        android:layout_marginTop="26dp"
        android:layout_centerHorizontal="true"
        android:onClick="calculatePressed"/>

</RelativeLayout>

</ScrollView>
