<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_budget"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.barriekealyca1.mybudget.activities.activities.Budget">

    <TextView
        android:text="@string/budgetTitle"
        android:textSize="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/budgetTitle" />

    <!-- Nested LinearLayout to allow presentation of List with headings and data -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/savingsColumn"
        android:text="@string/savingsColumnText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/rentColumn"
        android:text="@string/rentColumnText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/billsColumn"
        android:text="@string/billsColumnText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:id="@+id/spendingList"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/budgetTitle"/>
    
    <TextView
        android:id="@+id/amountLeft"
        android:text="@string/amountLeft"
        android:textSize="18dp"
        android:layout_marginTop="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/amountLeftNum"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"
        android:text="@string/saveButton"
        android:onClick="saveButtonPressed"/>
    
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progressBar"
        android:indeterminate="false"/>-->
</LinearLayout>
